--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="landingPage content-centered">       
             
                 <h1 id="name"> Kashif Hussain</h1>
-                <h3 id="posn">Full Stack Web Developer</h3>  
+                <h3 id="posn">A Front end develoeper moving towards full stack</h3>  
                 <div id="buttonContainer">    
                     <button type="button" id = "infoBtn" >Learn More</button>				
                     <button type="button" id = "contactBtn" >Contact</button>      
